fixed some scaling issues on smaller devices

--- a/css/values.css
+++ b/css/values.css
@@ -162,6 +162,7 @@
     .small_middle {
         margin-left: 1rem;
         margin-bottom: 1rem;
+        margin-right: 1rem;
     }
 }
 
